--- a/style.css
+++ b/style.css
@@ -17,16 +17,18 @@ nav{
     top:0;
     z-index:99;
 }
-
-nav .nav-left, nav .nav-right{
+ 
+nav .nav-left, nav .nav-right
+{
     display:flex;
     align-items: center;
 }
-
-nav .nav-left > img{
-    width:40px;
+nav .nav-left > i{
+    width: 30px;
+    height: 18px;
+    scale: 2.5;
+    margin-left: 20px;
 }
-
 nav .nav-left > input{
     height:40px;
     padding:5px 10px;
@@ -42,19 +44,16 @@ nav .nav-middle{
     align-items:flex-end;
     padding-bottom: 5px;
 }
-
 nav .nav-middle a{
     text-decoration: none;
     color:#333;
     padding:10px;
     margin:0px 10px;
 }
-
 nav .nav-middle a.active{
     color:royalblue;
     position:relative;
 }
-
 nav .nav-middle a.active::after{
     content:'';
     width:100%;
@@ -64,13 +63,41 @@ nav .nav-middle a.active::after{
     left:0;
     background:royalblue;
 }
-
 nav .nav-middle a > i{
     font-size: 25px;
 }
 
-nav .nav-right .profile, .container .left-panel .profile{
-    background: url('./images/dp.jpg');
+nav .nav-middle{
+    display:flex;
+    align-items:flex-end;
+    padding-bottom: 5px;
+}
+nav .nav-middle a{
+    text-decoration: none;
+    color:#333;
+    padding:10px;
+    margin:0px 10px;
+}
+nav .nav-middle a.active{
+    color:royalblue;
+    position:relative;
+}
+nav .nav-middle a.active::after{
+    content:'';
+    width:100%;
+    height:3px;
+    position:absolute;
+    bottom:0;
+    left:0;
+    background:royalblue;
+}
+nav .nav-middle a > i{
+    font-size: 25px;
+}
+
+
+nav .nav-right .profile{
+    background: url('./images/selfpic.jpg');
     height:30px;
     width:30px;
     background-size: cover;
@@ -85,13 +112,28 @@ nav .nav-right a{
     width:40px;
     border-radius: 50%;
     background:#eee;
-    display:grid;
+    display:flex;
     place-items: center;
-    margin-left:1rem;
+    margin-right: 150px;
 }
 
 nav .nav-right a > i{
-    font-size:18px;
+    font-size:20px;
+    place-items: center;
+    margin-top:5px;
+    margin-left: 10px;
 }
 
 
+
+.newfeeds{
+    background:#eee;
+    display:flex;
+}
+
+.newfeeds .left-panel, .newfeeds .right-panel{
+    position: sticky;
+    top:70px;
+    width:250px;
+    height:calc(100vh - 70px);
+}
