--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 }
 
 nav{
-    height:70px;
+    height:56px;
     width:100%;
     padding: 0 2rem;
     display:flex;
@@ -49,6 +49,7 @@ nav .nav-middle a{
     color:#333;
     padding:10px;
     margin:0px 10px;
+    width:111.6px;
 }
 nav .nav-middle a.active{
     color:royalblue;
@@ -65,6 +66,7 @@ nav .nav-middle a.active::after{
 }
 nav .nav-middle a > i{
     font-size: 25px;
+    margin-left:35px;
 }
 
 nav .nav-middle{
@@ -171,9 +173,12 @@ img {
 
 .newfeeds .left-panel ul li > p{
     margin-left: 10px;
+    font-size: 15px;
 }
 .newfeeds .left-panel ul li img{
-   border-radius :50%;
+    height:32px;
+    width:32px;
+    border-radius :50%;
 }
 .newfeeds .left-panel ul li > i{
     font-size: 20px;
@@ -217,6 +222,9 @@ img {
     font-size:12px;
 }
 
+
+
+
 /* ------------------------------------------------ */
 /* ------------------------------------------------ */
 /* ------------------------------------------------ */
@@ -230,133 +238,105 @@ img {
     display:flex;
     flex-direction: column;
     align-items:center;
+    margin: 0px  5px;
 }
 
 .newfeeds .middle-panel .story-section{
-    display:flex;
+    display: flex;
+    padding: 15px 1rem;
+    height:281.99px;
+    border: 1px solid #ddd;
 }
 
 
 .newfeeds .middle-panel .story-section .story-create{
-    width: 120px;
-    height: 200px;
+    width: 140.63px;
+    height: 249.99px;
     border-radius: 10px;
     position : relative;
+    margin-right:10px;
+    background: #fff;
+    z-index: 1;
 }
 
+.newfeeds .middle-panel .story-section .story-create img{
+    width: 140.63px;
+    height: 200px;
+    border-top-right-radius: 10px;
+    border-top-left-radius: 10px;
+    position : relative;
+    z-index: 2;
+}
 
+.newfeeds .middle-panel .story-section .story-create .name-create-str{
+    position: absolute;
+    top: 220px;
+    left:10px;
+    z-index: 3;
+    padding : 5px;
+    font-weight: bold;
+    font-size: 12px;
+}
 
-
+.newfeeds .middle-panel .story-section .story .avt-in-str-set img{
+    border-radius: 50%;
+    width: 30px;
+    height:40px;
+    overflow: hidden;
+    position:absolute;
+    z-index: 2;
+    top: 10px;
+    left:10px
+}
+.newfeeds .middle-panel .story-section .story .name{
+    position: absolute;
+    top: 220px;
+    left:10px;
+    z-index: 3;
+    padding : 5px;
+    color: #fff;
+    font-weight: bold;
+    font-size: 12px;
+}
+.newfeeds .middle-panel .story-section .story{
+    box-shadow: 0 0 5px 5px #ddd;
+    background: #fff;
+    width: 140.8px;
+    height: 251px;
+    border-radius: 10px;
+    margin-right:10px;
+    overflow: hidden;
+    position: relative;
+}
+.newfeeds .middle-panel .story-section .story img{
+    border-radius: 10px;
+    width: 140.63px;
+    height:249.99px;
+    z-index: 1;
+}
 /* ------------------------------------------------ */
 /* ------------------------------------------------ */
 
-
-
-
-
-
-
-
-
-
-
-/* ------------------------------------------------ */
-/* ------------------------------------------------ */
-
-
-
+.post-create{
+    width: 500px;
+    height:122.8px;
+    padding: 12px 16px 10px;
+    margin-top: 80px;
+}
+.post-create .post-bot{
+    display: flex;
+}
 
 .post{
-    width:550px;
-    background:#fff;
-    border-radius:10px;
-    padding:10px;
-    margin:10px;
+    width:500px;
+    margin-top :40px;
+    flex:1;
+    display:flex;
+    flex-direction: column;
 }
-
 .post .post-top{
     display:flex;
-    align-items: center;
-    padding:10px;
 }
-
-.post .post-top .dp{
-    width:40px;
-    height:40px;
-    border-radius: 50%;
-    overflow:hidden;
-}
-
-.post .post-top .dp > img{
-    width:100%;
-    cursor:pointer;
-}
-
-.post .post-top .post-info{
-    margin-left:10px;    
-    font-weight: bold;
-}
-
-.post .post-top .post-info .name{
-    cursor:pointer;
-    font-size:16px;
-}
-
-.post .post-top .post-info .time{
-    font-size:12px;
-    cursor:pointer;
-}
-
-.post .post-top i{
-    margin-left:auto;
-    cursor: pointer;
-}
-
-.post .post-top > input{
-    height:40px;
-    padding:5px 10px;
-    border-radius:25px;
-    outline:none;
-    border:none;
-    flex:1;
-    background:#eee;
-    margin-left:10px;
-}
-
-.post .post-content{
-    font-size:16px;
-    font-weight:normal;
-    padding:10px;
-}
-
-.post .post-content > img{
-    width:100%;
-    margin:5px 0px;
-}
-
-.post .post-bottom{
-    box-shadow: 1px solid #ddd;
+.post .post-bot{
     display:flex;
-    justify-content: space-between;
-    padding:5px 5px 0px 5px;
 }
-
-.post .post-bottom .action{
-    padding:10px;
-    border-radius:10px;
-    transition: .3s ease-in;
-    cursor: pointer;
-}
-
-.post .post-bottom .action:hover{
-    background:#eee;
-}
-
-.post.create .post-bottom > .action{
-    color:#d74;
-}
-
-
-
-
-
