--- a/style.css
+++ b/style.css
@@ -246,6 +246,7 @@ img {
     padding: 15px 1rem;
     height:281.99px;
     border: 1px solid #ddd;
+    cursor: pointer;
 }
 
 
@@ -276,17 +277,19 @@ img {
     padding : 5px;
     font-weight: bold;
     font-size: 12px;
+    margin-left: 20px;
 }
 
 .newfeeds .middle-panel .story-section .story .avt-in-str-set img{
     border-radius: 50%;
     width: 30px;
-    height:40px;
+    height:30px;
     overflow: hidden;
     position:absolute;
     z-index: 2;
     top: 10px;
-    left:10px
+    left:10px;
+    border:royalblue 4px solid;
 }
 .newfeeds .middle-panel .story-section .story .name{
     position: absolute;
@@ -314,6 +317,31 @@ img {
     height:249.99px;
     z-index: 1;
 }
+.middle-panel .story-section .story-create .plus-icon > i{
+    margin-left: 61px;
+    margin-top: -10px;
+    border:4px solid #fff;
+    scale:2; 
+    z-index: 2;
+    position: absolute;
+    border-radius: 50%;
+}
+
+.newfeeds .story-section .story-create .poc:hover > img{
+    transform:scale(1.05);
+}
+.middle-panel .story-section .story-create .poc > img{
+    transition:.3s ease-in;
+}
+.newfeeds .story-section .story:hover > img{
+    transform:scale(1.05);
+}
+.middle-panel .story-section .story > img{
+    height:100%;
+    transition:.3s ease-in;
+}
+/* ------------------------------------------------ */
+/* ------------------------------------------------ */
 /* ------------------------------------------------ */
 /* ------------------------------------------------ */
 
@@ -321,21 +349,36 @@ img {
     width: 500px;
     height:122.8px;
     padding: 12px 16px 10px;
-    margin-top: 80px;
+    margin-top: 30px;
+    background: #fff;
+    border-radius: 10px;
+
 }
 .post-create .post-bot{
+    display: flex;
+}
+.post-create .post-top{
     display: flex;
 }
 
 .post{
     width:500px;
-    margin-top :40px;
+    margin-top :20px;
     flex:1;
     display:flex;
     flex-direction: column;
+    padding: 12px 16px 10px;
+    background: #fff;
+    border-radius: 10px;
 }
+
 .post .post-top{
     display:flex;
+}
+.avt-person-post > img{
+    height:30px;
+    width:30px;
+    border-radius: 50%;
 }
 .post .post-bot{
     display:flex;
