--- a/style.css
+++ b/style.css
@@ -373,13 +373,119 @@ img {
 }
 
 .post .post-top{
+    margin:0px 0px 12px;
+    padding:12px 16px 0px;
     display:flex;
+    align-items: center;
+    padding:10px;
+
+}
+.avt-person-post{
+    height:40px;
+    width:40px;
+    border-radius: 50%;
+    overflow:hidden;
 }
 .avt-person-post > img{
-    height:30px;
-    width:30px;
-    border-radius: 50%;
+    height:100%;
+    cursor:pointer;
+
 }
+.post .post-top .post-info{
+    width:348px;
+    height:46.39px;
+    margin-left:10px;
+}
+.post .post-top .post-info .name{
+    height:20px;
+    cursor:pointer;
+    font-size:15px;
+    color:#050505;
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif ;
+}
+.post .post-top .post-info .time{
+    height:17.6px;
+    color:#65676B;
+    font-size:13px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+.post-top > input{
+    border-radius:25px;
+    width:420px;
+    height:40px;
+    background: #F2F0F5;
+    padding: 8px 12px;
+    font-size: 17px;
+    margin-bottom: 10px;
+    border:none;
+    color:65676B;
+
+}
+
 .post .post-bot{
     display:flex;
 }
+
+.post-bot .button-below-post-create{
+    height:40px;
+    padding: 8px;
+    display:flex;
+}
+
+.post-bot .button-below-post-create img{
+    width:26px;
+    height:26px;
+    font-size:15px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    color:#65676B;
+}
+
+.post-bot .button-below-post-create span{
+    font-size:15px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    color:#65676B;
+    height:19.99px;
+    align-items: center;
+    margin-left: 10px;
+    padding: 2.5px;
+}
+hr.line{
+    border: 0;
+    height: 0;
+    border-top: 1px solid rgba(0, 0, 0, 0.1);
+    border-bottom: 1px solid rgba(255, 255, 255, 0.3);
+}
+
+/* ------------------------------------------------ */
+/* ------------------------------------------------ */
+/* ------------------------------------------------ */
+/* ------------------------------------------------ */
+
+
+
+.right-panel{
+    padding: .7rem 1rem;
+}
+.Birthdays a{
+    display: flex;
+    margin-top:15px;
+}
+
+.friends-section .friend{
+    display: flex;
+    margin-top:15px;
+}
+
+.friends-section .friend .avt-person-left-panel img{
+    height:40px;
+    width:40px;
+    border-radius: 50px;
+}
+
+.friends-section .friend .name{
+    cursor:pointer;
+    font-size:15px;
+    color:#050505;
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif ;
+}
+
