--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
     margin:0;
     padding:0;
     box-sizing: border-box;
-    font-family: sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 nav{
@@ -23,20 +23,36 @@ nav .nav-left, nav .nav-right, nav .nav-middle
     display:flex;
     align-items: center;
 }
+nav .nav-left{
+    width:320px;
+    height:56px;
+}
 nav .nav-left > i{
     width: 30px;
     height: 18px;
     scale: 2.5;
-    margin-left: 20px;
+    margin-left: 10px;
+    color: #1877F2;
 }
-nav .nav-left > input{
+nav .nav-left .search-section{
+    width:240px;
     height:40px;
-    padding:5px 10px;
     border:none;
     border-radius: 25px;
     outline:none;
     background-color: #eee;
-    margin-left: 10px;
+}
+nav .nav-left .search-section > i{
+    margin-left: 13px;
+}
+nav .nav-left .search-section > input{
+    height:40px;
+    padding:7px 8px 9px;
+    border:none;
+    border-radius: 25px;
+    outline:none;
+    background-color: #eee;
+    font-size: 15px;
 }
 
 nav .nav-middle{
@@ -150,14 +166,16 @@ img {
     top:70px;
     width:250px;
     height:calc(115vh - 70px);
+    overflow-y: auto;
 }
 
-.newfeeds .left-panel ul{
-    padding: 10px 0px;
+.newfeeds .left-panel .left-panel-but ul{
+    width:280px;
+    padding: 0px 8px;
 }
 
 
-.newfeeds .left-panel ul li{
+.newfeeds .left-panel .left-panel-but ul li{
     list-style-type: none;
     display: flex;
     padding: .7rem 1rem;
@@ -167,26 +185,29 @@ img {
 
 }
 
-.newfeeds .left-panel ul li:hover{
+.newfeeds .left-panel .left-panel-but ul li:hover{
     background: #ddd;
 }
 
-.newfeeds .left-panel ul li > p{
+.newfeeds .left-panel .left-panel-but ul li > p{
     margin-left: 10px;
     font-size: 15px;
+    font-family: Arial, Helvetica, sans-serif;
+    color:#050505;
 }
-.newfeeds .left-panel ul li img{
+.newfeeds .left-panel .left-panel-but ul li img{
     height:32px;
     width:32px;
     border-radius :50%;
+    object-fit: cover;
 }
-.newfeeds .left-panel ul li > i{
+.newfeeds .left-panel .left-panel-but ul li > i{
     font-size: 20px;
     border-radius: 50%;
     color: slateblue;
 }
 
-.newfeeds .left-panel ul li .profile{
+.newfeeds .left-panel .left-panel-but ul li .profile{
     background: url('./images/selfpic.jpg');
     height:28px;
     width:28px;
@@ -196,7 +217,7 @@ img {
     
 }
 
-.newfeeds .left-panel ul li .see-more a{
+.newfeeds .left-panel .left-panel-but ul li .see-more a{
     text-decoration: none;
     color:#333;
     height:28px;
@@ -207,7 +228,7 @@ img {
     margin-right: 10px;
 
 }
-.newfeeds .left-panel ul li .see-more a > i{
+.newfeeds .left-panel .left-panel-but ul li .see-more a > i{
     font-size:20px;
     place-items: center;
 }
@@ -243,10 +264,10 @@ img {
 
 .newfeeds .middle-panel .story-section{
     display: flex;
-    padding: 15px 1rem;
+    padding: 16px 2rem;
     height:281.99px;
-    border: 1px solid #ddd;
     cursor: pointer;
+    margin-top: 8px;
 }
 
 
@@ -267,6 +288,7 @@ img {
     border-top-left-radius: 10px;
     position : relative;
     z-index: 2;
+    object-fit: cover;
 }
 
 .newfeeds .middle-panel .story-section .story-create .name-create-str{
@@ -282,8 +304,8 @@ img {
 
 .newfeeds .middle-panel .story-section .story .avt-in-str-set img{
     border-radius: 50%;
-    width: 30px;
-    height:30px;
+    width: 40px;
+    height:40px;
     overflow: hidden;
     position:absolute;
     z-index: 2;
@@ -316,6 +338,7 @@ img {
     width: 140.63px;
     height:249.99px;
     z-index: 1;
+    object-fit: cover;
 }
 .middle-panel .story-section .story-create .plus-icon > i{
     margin-left: 61px;
@@ -349,12 +372,12 @@ img {
     width: 500px;
     height:122.8px;
     padding: 12px 16px 10px;
-    margin-top: 30px;
+    margin-top: 10px;
     background: #fff;
     border-radius: 10px;
 
 }
-.post-create .post-bot{
+.post-create .post-create-bot{
     display: flex;
 }
 .post-create .post-top{
@@ -373,7 +396,6 @@ img {
 }
 
 .post .post-top{
-    margin:0px 0px 12px;
     padding:12px 16px 0px;
     display:flex;
     align-items: center;
@@ -389,7 +411,7 @@ img {
 .avt-person-post > img{
     height:100%;
     cursor:pointer;
-
+    object-fit: cover;
 }
 .post .post-top .post-info{
     width:348px;
@@ -401,14 +423,15 @@ img {
     cursor:pointer;
     font-size:15px;
     color:#050505;
-    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif ;
+    font-family: Arial, Helvetica, sans-serif ;
 }
 .post .post-top .post-info .time{
     height:17.6px;
     color:#65676B;
     font-size:13px;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
 }
+
 .post-top > input{
     border-radius:25px;
     width:420px;
@@ -421,39 +444,79 @@ img {
     color:65676B;
 
 }
-
-.post .post-bot{
-    display:flex;
+.post-bot{
+    width:500px;
+    height:88px;
 }
-
-.post-bot .button-below-post-create{
+.post .post-bot .button-below-Post{
+    display:flex;
+    width:480px;
+    height:52px;
+    margin: -6px -2px;
+    padding: 4px;
+}
+.post-create-bot .button-below-post-create{
     height:40px;
     padding: 8px;
     display:flex;
 }
 
-.post-bot .button-below-post-create img{
+.post-create-bot .button-below-post-create img{
     width:26px;
     height:26px;
     font-size:15px;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
     color:#65676B;
 }
 
-.post-bot .button-below-post-create span{
+.post-create-bot .button-below-post-create span{
     font-size:15px;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
     color:#65676B;
     height:19.99px;
     align-items: center;
     margin-left: 10px;
     padding: 2.5px;
 }
+/* ------ */
+
+.post .post-bot .button-below-post{
+    width:161.34px;
+    height:44px;
+    margin: -6px -2px;
+    padding: 12px;
+    align-items: center;
+    display: flex;
+}
+
+
+.button-below-post img{
+    width:20px;
+    height:20px;
+    color:#65676B;
+}
+
+.button-below-post span{
+    font-size:15px;
+    font-family: Arial, Helvetica, sans-serif;
+    color:#65676B;
+    height:19.99px;
+    align-items: center;
+    margin-left: 10px;
+    padding: 2.5px;
+}
+svg{
+    height:20px;
+    width:20px;
+}
+/* -------- */
 hr.line{
     border: 0;
     height: 0;
     border-top: 1px solid rgba(0, 0, 0, 0.1);
-    border-bottom: 1px solid rgba(255, 255, 255, 0.3);
+    border-bottom: 1px solid rgba(156, 151, 151, 0.3);
+    margin-bottom: 10px;
+    margin-top: 10px;
 }
 
 /* ------------------------------------------------ */
@@ -465,10 +528,12 @@ hr.line{
 
 .right-panel{
     padding: .7rem 1rem;
+    width:280px;
 }
 .Birthdays a{
     display: flex;
     margin-top:15px;
+    justify-content: left;
 }
 
 .friends-section .friend{
@@ -477,15 +542,19 @@ hr.line{
 }
 
 .friends-section .friend .avt-person-left-panel img{
-    height:40px;
-    width:40px;
+    height:28px;
+    width:28px;
     border-radius: 50px;
+    object-fit: cover;
 }
 
 .friends-section .friend .name{
     cursor:pointer;
+    text-decoration-thickness: 2px;
     font-size:15px;
     color:#050505;
-    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif ;
+    font-family:Arial, Helvetica, sans-serif ;
+    margin-top: 5px;
+    margin-left: 10px;
 }
 
