--- a/style.css
+++ b/style.css
@@ -58,17 +58,17 @@ nav .nav-left .search-section > input{
 nav .nav-middle{
     display:flex;
     align-items:flex-end;
-    padding-bottom: 5px;
+    margin-left: -95px;
 }
 nav .nav-middle a{
     text-decoration: none;
     color:#333;
-    padding:10px;
+    padding:10px 10px 10px;
     margin:0px 10px;
     width:111.6px;
 }
 nav .nav-middle a.active{
-    color:royalblue;
+    color:#0866FF;
     position:relative;
 }
 nav .nav-middle a.active::after{
@@ -85,7 +85,7 @@ nav .nav-middle a > i{
     margin-left:35px;
 }
 
-nav .nav-middle{
+/* nav .nav-middle{
     display:flex;
     align-items:flex-end;
     padding-bottom: 5px;
@@ -111,7 +111,7 @@ nav .nav-middle a.active::after{
 }
 nav .nav-middle a > i{
     font-size: 25px;
-}
+} */
 
 
  nav .nav-right .profile, .newfeeds .left-panel.profile{
@@ -302,6 +302,7 @@ img {
     flex-direction: column;
     align-items:center;
     margin: 0px  5px;
+    margin-left: 90px;
 }
 .post-bot hr{
     width:468px;
@@ -633,6 +634,7 @@ img {
     height:16px;
     margin-left: 4px;
     margin-right: 4px;
+    color:#65676B;
 }
 .post-bot .like-descrip .like-descrip-right p{
     font-size: 15px;
@@ -861,6 +863,7 @@ hr.line{
     display: flex;
     margin-top:15px;
     justify-content: left;
+    align-items: center;
 }
 
 .friends-section .friend{
@@ -908,7 +911,7 @@ hr.line{
 }
 .birthdaybutton:hover{
     background: #ddd;
-    
+
 }
 
 
