--- a/style.css
+++ b/style.css
@@ -443,6 +443,7 @@ img {
     display: flex;
     margin-top: -5px;
     margin-left: 10px;
+    /* align-items: center; */
 }
 .post-create .post-top{
     display: flex;
@@ -514,6 +515,7 @@ img {
     margin-bottom: 10px;
     border:none;
     color:65676B;
+    outline: none;
 }
 .avt-gr-p-3{
     position: relative;
@@ -584,6 +586,7 @@ img {
     height:40px;
     padding: 8px;
     display:flex;
+    margin-left: 7px;
 }
 
 .post-create-bot .button-below-post-create img{
@@ -601,7 +604,8 @@ img {
     height:19.99px;
     align-items: center;
     margin-left: 10px;
-    padding: 2.5px;
+    padding: 3.5px;
+
 }
 /* ------ */
 .post-bot .like-descrip{
@@ -735,6 +739,165 @@ hr.line{
     border-bottom: 1px solid rgba(156, 151, 151, 0.3);
 }
 
+.cmt-bl-post{
+    width:500px;
+    margin: 0px 0px 6px;
+    margin-left: -16px;
+}
+.cmt-bl-post .my-cmt-section{
+    height:36.1px;
+    padding: 0px 16px;
+    display:flex;
+    /* justify-content: space-between; */
+    margin-top: 6px;
+}
+
+.cmt-bl-post .my-cmt-section .my-avt-in-cmt{
+    width:32px;
+    height:32px;
+    display:flex;
+}
+.cmt-bl-post .my-cmt-section .my-avt-in-cmt img{
+    width:32px;
+    height:32px;
+    border-radius: 50px;
+    position: relative;
+    z-index: 99;
+}
+.cmt-bl-post .my-cmt-section .my-avt-in-cmt .chevron-down{
+    width: 20px;
+    height:20px;
+    padding: 4px;
+    position: absolute;
+    z-index: 100;
+    margin-top: 15px;
+    margin-left: 15px;
+}
+.cmt-bl-post .my-cmt-section .my-avt-in-cmt .chevron-down .chevron-down-svg{
+    width: 12px;
+    height:12px;
+    background-color: #cbcdce;
+    border-radius: 50px;
+}
+.cmt-bl-post .my-cmt-section .input-cmt{
+    display: flex;
+    background-color: #eee;
+    border-radius: 25px;
+    margin-left: 6px;
+}
+.cmt-bl-post .my-cmt-section .input-cmt input{
+    width:294px;
+    height:36.1px;
+    padding:8px 12px;
+    outline: none;
+    border:none;
+    background-color: #eee;
+    border-radius: 25px;
+}
+.cmt-bl-post .my-cmt-section .input-cmt .cmt-icon-butt{
+    width:140px;
+    height:36px;
+    display: flex;
+}
+.cmt-bl-post .my-cmt-section .input-cmt .cmt-icon-butt ul{
+    list-style-type: none;
+    width:140px;
+    height:36px;
+    margin: 0px 4px 0px -8px;
+    display: flex;
+    align-items: center;
+    margin-top: 1.75px;
+}
+
+.cmt-bl-post .public-cmt{
+    flex:1;
+    display: flex;
+    flex-direction: column;
+    margin-top:6px;
+}
+.cmt-bl-post .public-cmt .cmt-top{
+    display: flex;
+    width:500px;
+    height:93.58px;
+    padding:4px 0px 0px 16px;
+}
+.cmt-bl-post .public-cmt .cmt-top .avt-in-public-cmt img{
+    width:32px;
+    height:32px;
+    border-radius: 50px;
+    scale:1.2
+}
+.cmt-bl-post .public-cmt .cmt-top .cmt-ct .cmt-ct-top{
+    width:404px;
+    padding: 8px 12px;
+    border-radius: 20px;
+    background: #eee;
+    margin-left: 7px;
+}
+.cmt-bl-post .public-cmt .cmt-top .cmt-ct .cmt-ct-top a{
+    font-size: 13px;
+    color:#050505;
+}
+.cmt-bl-post .public-cmt .cmt-top .cmt-ct .cmt-ct-top p{
+    font-size: 15px;
+    color:#050505;
+}
+
+.cmt-bl-post .public-cmt .cmt-top .cmt-ct .cmt-ct-bot ul{
+    width:163.1px;
+    height:18px;
+    margin: 0px -8px 0px 4px;
+    padding: 3px 0px 0px;
+    list-style-type: none;
+    display: flex;
+}
+.cmt-bl-post .public-cmt .cmt-top .cmt-ct .cmt-ct-bot ul >li{
+   margin-left: 10px;
+   font-size:12px;
+   color:#65676B;
+}
+.cmt-bl-post .public-cmt .cmt-bot{
+    width:500px;
+    height:32px;
+    padding: 0px 0px 0px 54px;
+}
+.cmt-bl-post .public-cmt .cmt-bot .cmt-rep{
+    width:446px;
+    height:32px;
+    padding: 0px 6px 0px 0px;
+    display: flex;
+    margin-top: 8px;
+}
+.cmt-bl-post .public-cmt .cmt-bot .cmt-rep img{
+    width:16px;
+    height:16px;
+    color:#65676B;
+    margin-left: 5px;
+}
+
+.cmt-bl-post .public-cmt .cmt-bot .cmt-rep p{
+    font-size: 15px;
+    color:#65676B;
+    margin-left: 10px;
+}
+.cmt-bl-post .public-cmt .view-more{
+    width:468px;
+    height:32px;
+    padding:0px 6px 0px 0px;
+    margin-left: 20px;
+    margin-top: 10px;
+    margin-bottom: -12px;;
+}
+.cmt-bl-post .public-cmt .view-more p{
+    font-size: 15px;
+    color:#65676B;
+    align-items: center;
+}
+.cmt-1-p-1{
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+}
 /* ------------------------------------------------ */
 /* ------------------------------------------------ */
 /* ------------------------------------------------ */
