--- a/style.css
+++ b/style.css
@@ -8,7 +8,6 @@
 nav{
     height:56px;
     width:100%;
-    padding: 0 2rem;
     display:flex;
     justify-content: space-between;
     background-color: #fff;
@@ -26,109 +25,124 @@ nav .nav-left, nav .nav-right, nav .nav-middle
 nav .nav-left{
     width:320px;
     height:56px;
+    padding: 0px 0px 0px 0px;
 }
-nav .nav-left > i{
-    width: 30px;
-    height: 18px;
-    scale: 2.5;
-    margin-left: 10px;
-    color: #1877F2;
+nav .nav-left .logoFBnavleft{
+    width:40px;
+    height:56px;
+    margin: 0px 0px 0px 16px;
+    padding:8px 0px 0px 0px;
+}
+nav .nav-left .logoFBnavleft > img{
+    width:40px;
+    height:40px;
 }
 nav .nav-left .search-section{
     width:240px;
     height:40px;
+    margin-left: 12px;
     border:none;
     border-radius: 25px;
     outline:none;
-    background-color: #eee;
+    background-color: #F0F2F5;
+    display: flex;
 }
 nav .nav-left .search-section > i{
-    margin-left: 13px;
+    width:16px;
+    height:16px;
+    margin:12px 0px 12px 12px;
 }
 nav .nav-left .search-section > input{
+    width:212px;
     height:40px;
     padding:7px 8px 9px;
     border:none;
     border-radius: 25px;
     outline:none;
-    background-color: #eee;
+    background-color: #F0F2F5;
     font-size: 15px;
 }
 
 nav .nav-middle{
+    width:1366px;
+    height:56px;
     display:flex;
     align-items:flex-end;
-    margin-left: -99px;
+    position:absolute;
+    z-index: 999;
+    padding:0px 110px;
 }
-nav .nav-middle a{
+nav .nav-middle ul{
+    width:1366px;
+    height:56px;
+    display: flex;
+    list-style-type: none;
+    padding: 0px 284px;
+}
+nav .nav-middle ul li {
+    width:111.59px;
+    height:56px;
+    padding: 16px 0px;
+    margin-right:5px;
+    
+}
+nav .nav-middle ul li a{
     text-decoration: none;
     color:#333;
-    padding:10px 10px 10px;
-    margin:0px 10px;
     width:111.6px;
+    
 }
-nav .nav-middle a.active-1{
+nav .nav-middle ul li a.active-1{
+    width:111.59px;
+    padding:10px 10px 10px;
     color:#0866FF;
     position:relative;
+    padding-left:43.79px;
 }
-nav .nav-middle a.active-1::after{
-    content:'';
-    width:100%;
-    height:3px;
-    position:absolute;
-    bottom:0;
-    left:0;
-    background:royalblue;
-}
-nav .nav-middle a > i{
-    font-size: 25px;
-    margin-left:20px;
-}
-nav .nav-middle .active-1 i{
-    font-size: 25px;
-    margin-left:35px;
-}
-nav .nav-middle .active-2 i{
-    margin-left:25px;
-}
-nav .nav-middle .active-3 i{
-    margin-left:5px;
-}
-nav .nav-middle .active-4 i{
-    margin-left:-15px;
-}
-nav .nav-middle .active-5 i{
-    margin-left:-30px;
-}
-
-/* nav .nav-middle{
-    display:flex;
-    align-items:flex-end;
-    padding-bottom: 5px;
-}
-nav .nav-middle a{
-    text-decoration: none;
-    color:#333;
-    padding:10px;
-    margin:0px 10px;
-}
-nav .nav-middle a.active{
-    color:royalblue;
+nav .nav-middle ul li a.active-2{
+    width:111.59px;
+    padding:10px 10px 10px;
     position:relative;
+    padding-left:43.79px;
 }
-nav .nav-middle a.active::after{
+nav .nav-middle ul li a.active-3{
+    width:111.59px;
+    padding:10px 10px 10px;
+    position:relative;
+    padding-left:43.79px;
+}
+nav .nav-middle ul li a.active-4{
+    width:111.59px;
+    padding:10px 10px 10px;
+    position:relative;
+    padding-left:43.79px;
+}
+nav .nav-middle ul li a.active-5{
+    width:111.59px;
+    padding:10px 10px 10px;
+    position:relative;
+    padding-left:43.79px;
+}
+nav .nav-middle ul li a.active-1::after{
     content:'';
-    width:100%;
+    width:111.59px;
     height:3px;
     position:absolute;
     bottom:0;
     left:0;
     background:royalblue;
 }
-nav .nav-middle a > i{
-    font-size: 25px;
-} */
+nav .nav-middle ul li a > i{
+    font-size: 24px;
+}
 
+
+nav .nav-right{
+    width:204px;
+    height:56px;
+    padding: 0px 16px 0px 4px;
+
+}
 
  nav .nav-right .profile, .newfeeds .left-panel.profile{
     background: url('./images/selfpic.jpg');
@@ -203,21 +217,31 @@ img {
 }
 
 .newfeeds{
-    background:#eee;
+    background:#F0F2F5;
     display:flex;
 }
 
 .newfeeds .left-panel{
     position: sticky;
     top:70px;
-    width:280px;
-    height:calc(115vh - 70px);
+    width:311px;
+    /* height:calc(115vh - 70px); */
     overflow-y: auto;
 }
 
+.newfeeds .left-panel .left-panel-but{
+    width:311px;
+    /* height:calc(115vh - 70px); */
+    overflow-y: auto;
+    padding-top: 20px;
+}
 
 .newfeeds .left-panel .left-panel-but ul{
-    width:280px;
+    list-style-type: none;
+    flex:1;
+    display: flex;
+    flex-direction: column;
+    width:311px;
     padding: 0px 8px;
 }
 
@@ -225,7 +249,9 @@ img {
 .newfeeds .left-panel .left-panel-but ul li{
     list-style-type: none;
     display: flex;
-    padding: .7rem 1rem;
+    width:295px;
+    height:52px;
+    padding: 0px 8px;
     align-items: center;
     border-radius: 5px;
     cursor: pointer;
@@ -242,22 +268,33 @@ img {
     font-family: Arial, Helvetica, sans-serif;
     color:#050505;
 }
-.newfeeds .left-panel .left-panel-but ul li img{
-    height:32px;
-    width:32px;
+.newfeeds .left-panel .left-panel-but ul li > img{
+    height:36px;
+    width:36px;
     border-radius :50%;
     object-fit: cover;
 }
-.newfeeds .left-panel .left-panel-but ul li > i{
+.newfeeds .left-panel .left-panel-but ul li .down-chn{
+    height:36px;
+    width:36px;
+    border-radius :50%;
+    background-color: #E4E6EB;
+    object-fit: cover;
+}
+.newfeeds .left-panel .left-panel-but ul li .down-chn a{
+    align-items: center;
+}
+.newfeeds .left-panel .left-panel-but ul li .down-chn a> i{
+    padding: 8px 8px 8px 8px;
     font-size: 20px;
     border-radius: 50%;
-    color: slateblue;
+    color: rgb(0, 0, 0);
 }
 
 .newfeeds .left-panel .left-panel-but ul li .profile{
     background: url('./images/selfpic.jpg');
-    height:28px;
-    width:28px;
+    height:36px;
+    width:36px;
     background-size:cover;
     border-radius: 50%;
     cursor: pointer;
@@ -313,21 +350,22 @@ img {
 
 
 .newfeeds .middle-panel{
+    width: 743.98px;
+    padding:0px 76.99px;
     flex:1;
     display:flex;
     flex-direction: column;
     align-items:center;
-    margin: 0px  5px;
-    margin-left: 90px;
 }
 .post-bot hr{
-    width:468px;
+    width:588px;
 }
 
 .newfeeds .middle-panel .story-section{
     display: flex;
-    padding: 16px 2rem;
-    height:281.99px;
+    width:590px;
+    height:266px;
+    padding:8px 0px;
     cursor: pointer;
     margin-top: 8px;
 }
@@ -338,7 +376,7 @@ img {
     height: 249.99px;
     border-radius: 10px;
     position : relative;
-    margin-right:10px;
+    margin-right:8px;
     background: #fff;
     z-index: 1;
 }
@@ -391,7 +429,7 @@ img {
     width: 140.8px;
     height: 251px;
     border-radius: 10px;
-    margin-right:10px;
+    margin-right:8px;
     overflow: hidden;
     position: relative;
 }
@@ -431,8 +469,8 @@ img {
 /* ------------------------------------------------ */
 
 .post-create{
-    width: 500px;
-    height:122.8px;
+    width: 590px;
+    height:123px;
     padding: 12px 16px 10px;
     margin-top: 10px;
     background: #fff;
@@ -453,7 +491,7 @@ img {
     margin-bottom: 10px;
 }
 .post{
-    width:500px;
+    width:590px;
     margin-top :20px;
     flex:1;
     display:flex;
@@ -906,7 +944,7 @@ hr.line{
 
 
 .right-panel{
-    width:360px;
+    width:311px;
     padding: 0px 0px 0px;
     position: sticky;
     top:70px;
