--- a/style.css
+++ b/style.css
@@ -78,6 +78,7 @@ nav .nav-middle ul{
     display: flex;
     list-style-type: none;
     padding: 0px 284px;
+    margin-left: 72px;
 }
 nav .nav-middle ul li {
     width:111.59px;
