--- a/style.css
+++ b/style.css
@@ -224,17 +224,14 @@ img {
 
 .newfeeds .left-panel{
     position: sticky;
-    top:70px;
     width:311px;
-    /* height:calc(115vh - 70px); */
+    height:calc(115vh - 70px);
     overflow-y: auto;
 }
 
 .newfeeds .left-panel .left-panel-but{
     width:311px;
-    /* height:calc(115vh - 70px); */
-    overflow-y: auto;
-    padding-top: 20px;
+    margin-top: 10px;
 }
 
 .newfeeds .left-panel .left-panel-but ul{
@@ -351,12 +348,14 @@ img {
 
 
 .newfeeds .middle-panel{
+    position: static;
     width: 743.98px;
     padding:0px 76.99px;
     flex:1;
     display:flex;
     flex-direction: column;
     align-items:center;
+    overflow-y: auto;
 }
 .post-bot hr{
     width:580px;
