--- a/style.css
+++ b/style.css
@@ -78,7 +78,7 @@ nav .nav-middle ul{
     display: flex;
     list-style-type: none;
     padding: 0px 284px;
-    margin-left: 72px;
+    /* margin-left: 72px; */
 }
 nav .nav-middle ul li {
     width:111.59px;
@@ -627,12 +627,14 @@ img {
     color:#65676B;
     font-family: Arial, Helvetica, sans-serif ;
 }
+.post .post-content{
+    width:590px;
+    padding: 0px 17.165px;
+}
 .post .post-content p{
     height:19,99px;
-    width:468px;
     color:#050505;
     font-size:15px;
-    padding-left:16px;
 }
 .post .post-content .hashtag{
     color: #0866FF;
@@ -648,6 +650,9 @@ img {
     height:332px;
     margin-bottom: 10px;
     margin-top: 10px;
+}
+.post-content .bg-ct p{
+    font-size: 18px;
 }
 .post-bot{
     width:590px;
@@ -954,6 +959,7 @@ hr.line{
     display: flex;
     flex-direction: column;
 }
+
 /* ------------------------------------------------ */
 /* ------------------------------------------------ */
 /* ------------------------------------------------ */
